--- a/React-project/e-commerece-project/frontend/package.json
+++ b/React-project/e-commerece-project/frontend/package.json
@@ -6,20 +6,38 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-paper": "^5.12.1",
-    "react-native-snap-carousel": "^4.0.0-beta.6"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^13.4.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-navigation": "^5.0.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "private": true
 }
